Common/parse_utils/parser_meme.output
Grammaire

    0 $accept: meme $end

    1 eol: EOL
    2    | EOL eol

    3 junk: STRING eol
    4     | STRING junk

    5 meme: version alphabet strands bg_frq motifs
    6     | version alphabet strands motifs
    7     | version alphabet bg_frq motifs
    8     | version alphabet motifs
    9     | version strands bg_frq motifs
   10     | version strands motifs
   11     | version bg_frq motifs
   12     | version motifs

   13 version: MEME_VERSION STRING eol
   14        | MEME_VERSION DOUBLE eol

   15 alphabet: ALPHABET STRING eol

   16 strands: STRANDS STRING eol
   17        | STRANDS STRING STRING eol

   18 bg_frq: BG_LETTER_FRQ junk frq_list eol

   19 frq_list: STRING DOUBLE
   20         | STRING DOUBLE frq_list

   21 motifs: name_line pwm url
   22       | name_line pwm
   23       | name_line pwm url motifs
   24       | name_line pwm motifs

   25 name_line: MOTIF STRING eol
   26          | MOTIF STRING STRING eol

   27 pwm: PWM ALEN NOMBRE MOTIF_W NOMBRE NSITES NOMBRE E NOMBRE eol mat

   28 mat: position eol
   29    | mat position eol

   30 position: DOUBLE
   31         | DOUBLE position

   32 url: URL STRING eol


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
NOMBRE (258) 27
DOUBLE (259) 14 19 20 30 31
STRING (260) 3 4 13 15 16 17 19 20 25 26 32
MEME_VERSION (261) 13 14
ALPHABET (262) 15
STRANDS (263) 16 17
BG_LETTER_FRQ (264) 18
PWM (265) 27
ALEN (266) 27
MOTIF_W (267) 27
NSITES (268) 27
E (269) 27
MOTIF (270) 25 26
URL (271) 32
EOL (272) 1 2


Non-terminaux, suivis des règles où ils apparaissent

$accept (18)
    à gauche: 0
eol (19)
    à gauche: 1 2, à droite: 2 3 13 14 15 16 17 18 25 26 27 28 29
    32
junk (20)
    à gauche: 3 4, à droite: 4 18
meme (21)
    à gauche: 5 6 7 8 9 10 11 12, à droite: 0
version (22)
    à gauche: 13 14, à droite: 5 6 7 8 9 10 11 12
alphabet (23)
    à gauche: 15, à droite: 5 6 7 8
strands (24)
    à gauche: 16 17, à droite: 5 6 9 10
bg_frq (25)
    à gauche: 18, à droite: 5 7 9 11
frq_list (26)
    à gauche: 19 20, à droite: 18 20
motifs (27)
    à gauche: 21 22 23 24, à droite: 5 6 7 8 9 10 11 12 23 24
name_line (28)
    à gauche: 25 26, à droite: 21 22 23 24
pwm (29)
    à gauche: 27, à droite: 21 22 23 24
mat (30)
    à gauche: 28 29, à droite: 27 29
position (31)
    à gauche: 30 31, à droite: 28 29 31
url (32)
    à gauche: 32, à droite: 21 23


État 0

    0 $accept: . meme $end
    5 meme: . version alphabet strands bg_frq motifs
    6     | . version alphabet strands motifs
    7     | . version alphabet bg_frq motifs
    8     | . version alphabet motifs
    9     | . version strands bg_frq motifs
   10     | . version strands motifs
   11     | . version bg_frq motifs
   12     | . version motifs
   13 version: . MEME_VERSION STRING eol
   14        | . MEME_VERSION DOUBLE eol

    MEME_VERSION  décalage et aller à l'état 1

    meme     aller à l'état 2
    version  aller à l'état 3


État 1

   13 version: MEME_VERSION . STRING eol
   14        | MEME_VERSION . DOUBLE eol

    DOUBLE  décalage et aller à l'état 4
    STRING  décalage et aller à l'état 5


État 2

    0 $accept: meme . $end

    $end  décalage et aller à l'état 6


État 3

    5 meme: version . alphabet strands bg_frq motifs
    6     | version . alphabet strands motifs
    7     | version . alphabet bg_frq motifs
    8     | version . alphabet motifs
    9     | version . strands bg_frq motifs
   10     | version . strands motifs
   11     | version . bg_frq motifs
   12     | version . motifs
   15 alphabet: . ALPHABET STRING eol
   16 strands: . STRANDS STRING eol
   17        | . STRANDS STRING STRING eol
   18 bg_frq: . BG_LETTER_FRQ junk frq_list eol
   21 motifs: . name_line pwm url
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    ALPHABET       décalage et aller à l'état 7
    STRANDS        décalage et aller à l'état 8
    BG_LETTER_FRQ  décalage et aller à l'état 9
    MOTIF          décalage et aller à l'état 10

    alphabet   aller à l'état 11
    strands    aller à l'état 12
    bg_frq     aller à l'état 13
    motifs     aller à l'état 14
    name_line  aller à l'état 15


État 4

    1 eol: . EOL
    2    | . EOL eol
   14 version: MEME_VERSION DOUBLE . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 17


État 5

    1 eol: . EOL
    2    | . EOL eol
   13 version: MEME_VERSION STRING . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 18


État 6

    0 $accept: meme $end .

    $défaut  accepter


État 7

   15 alphabet: ALPHABET . STRING eol

    STRING  décalage et aller à l'état 19


État 8

   16 strands: STRANDS . STRING eol
   17        | STRANDS . STRING STRING eol

    STRING  décalage et aller à l'état 20


État 9

    3 junk: . STRING eol
    4     | . STRING junk
   18 bg_frq: BG_LETTER_FRQ . junk frq_list eol

    STRING  décalage et aller à l'état 21

    junk  aller à l'état 22


État 10

   25 name_line: MOTIF . STRING eol
   26          | MOTIF . STRING STRING eol

    STRING  décalage et aller à l'état 23


État 11

    5 meme: version alphabet . strands bg_frq motifs
    6     | version alphabet . strands motifs
    7     | version alphabet . bg_frq motifs
    8     | version alphabet . motifs
   16 strands: . STRANDS STRING eol
   17        | . STRANDS STRING STRING eol
   18 bg_frq: . BG_LETTER_FRQ junk frq_list eol
   21 motifs: . name_line pwm url
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    STRANDS        décalage et aller à l'état 8
    BG_LETTER_FRQ  décalage et aller à l'état 9
    MOTIF          décalage et aller à l'état 10

    strands    aller à l'état 24
    bg_frq     aller à l'état 25
    motifs     aller à l'état 26
    name_line  aller à l'état 15


État 12

    9 meme: version strands . bg_frq motifs
   10     | version strands . motifs
   18 bg_frq: . BG_LETTER_FRQ junk frq_list eol
   21 motifs: . name_line pwm url
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    BG_LETTER_FRQ  décalage et aller à l'état 9
    MOTIF          décalage et aller à l'état 10

    bg_frq     aller à l'état 27
    motifs     aller à l'état 28
    name_line  aller à l'état 15


État 13

   11 meme: version bg_frq . motifs
   21 motifs: . name_line pwm url
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    MOTIF  décalage et aller à l'état 10

    motifs     aller à l'état 29
    name_line  aller à l'état 15


État 14

   12 meme: version motifs .

    $défaut  réduction par utilisation de la règle 12 (meme)


État 15

   21 motifs: name_line . pwm url
   22       | name_line . pwm
   23       | name_line . pwm url motifs
   24       | name_line . pwm motifs
   27 pwm: . PWM ALEN NOMBRE MOTIF_W NOMBRE NSITES NOMBRE E NOMBRE eol mat

    PWM  décalage et aller à l'état 30

    pwm  aller à l'état 31


État 16

    1 eol: . EOL
    1    | EOL .  [$end, DOUBLE, STRING, ALPHABET, STRANDS, BG_LETTER_FRQ, PWM, MOTIF, URL]
    2    | . EOL eol
    2    | EOL . eol

    EOL  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 1 (eol)

    eol  aller à l'état 32


État 17

   14 version: MEME_VERSION DOUBLE eol .

    $défaut  réduction par utilisation de la règle 14 (version)


État 18

   13 version: MEME_VERSION STRING eol .

    $défaut  réduction par utilisation de la règle 13 (version)


État 19

    1 eol: . EOL
    2    | . EOL eol
   15 alphabet: ALPHABET STRING . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 33


État 20

    1 eol: . EOL
    2    | . EOL eol
   16 strands: STRANDS STRING . eol
   17        | STRANDS STRING . STRING eol

    STRING  décalage et aller à l'état 34
    EOL     décalage et aller à l'état 16

    eol  aller à l'état 35


État 21

    1 eol: . EOL
    2    | . EOL eol
    3 junk: . STRING eol
    3     | STRING . eol
    4     | . STRING junk
    4     | STRING . junk

    STRING  décalage et aller à l'état 21
    EOL     décalage et aller à l'état 16

    eol   aller à l'état 36
    junk  aller à l'état 37


État 22

   18 bg_frq: BG_LETTER_FRQ junk . frq_list eol
   19 frq_list: . STRING DOUBLE
   20         | . STRING DOUBLE frq_list

    STRING  décalage et aller à l'état 38

    frq_list  aller à l'état 39


État 23

    1 eol: . EOL
    2    | . EOL eol
   25 name_line: MOTIF STRING . eol
   26          | MOTIF STRING . STRING eol

    STRING  décalage et aller à l'état 40
    EOL     décalage et aller à l'état 16

    eol  aller à l'état 41


État 24

    5 meme: version alphabet strands . bg_frq motifs
    6     | version alphabet strands . motifs
   18 bg_frq: . BG_LETTER_FRQ junk frq_list eol
   21 motifs: . name_line pwm url
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    BG_LETTER_FRQ  décalage et aller à l'état 9
    MOTIF          décalage et aller à l'état 10

    bg_frq     aller à l'état 42
    motifs     aller à l'état 43
    name_line  aller à l'état 15


État 25

    7 meme: version alphabet bg_frq . motifs
   21 motifs: . name_line pwm url
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    MOTIF  décalage et aller à l'état 10

    motifs     aller à l'état 44
    name_line  aller à l'état 15


État 26

    8 meme: version alphabet motifs .

    $défaut  réduction par utilisation de la règle 8 (meme)


État 27

    9 meme: version strands bg_frq . motifs
   21 motifs: . name_line pwm url
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    MOTIF  décalage et aller à l'état 10

    motifs     aller à l'état 45
    name_line  aller à l'état 15


État 28

   10 meme: version strands motifs .

    $défaut  réduction par utilisation de la règle 10 (meme)


État 29

   11 meme: version bg_frq motifs .

    $défaut  réduction par utilisation de la règle 11 (meme)


État 30

   27 pwm: PWM . ALEN NOMBRE MOTIF_W NOMBRE NSITES NOMBRE E NOMBRE eol mat

    ALEN  décalage et aller à l'état 46


État 31

   21 motifs: . name_line pwm url
   21       | name_line pwm . url
   22       | . name_line pwm
   22       | name_line pwm .  [$end]
   23       | . name_line pwm url motifs
   23       | name_line pwm . url motifs
   24       | . name_line pwm motifs
   24       | name_line pwm . motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol
   32 url: . URL STRING eol

    MOTIF  décalage et aller à l'état 10
    URL    décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 22 (motifs)

    motifs     aller à l'état 48
    name_line  aller à l'état 15
    url        aller à l'état 49


État 32

    2 eol: EOL eol .

    $défaut  réduction par utilisation de la règle 2 (eol)


État 33

   15 alphabet: ALPHABET STRING eol .

    $défaut  réduction par utilisation de la règle 15 (alphabet)


État 34

    1 eol: . EOL
    2    | . EOL eol
   17 strands: STRANDS STRING STRING . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 50


État 35

   16 strands: STRANDS STRING eol .

    $défaut  réduction par utilisation de la règle 16 (strands)


État 36

    3 junk: STRING eol .

    $défaut  réduction par utilisation de la règle 3 (junk)


État 37

    4 junk: STRING junk .

    $défaut  réduction par utilisation de la règle 4 (junk)


État 38

   19 frq_list: STRING . DOUBLE
   20         | STRING . DOUBLE frq_list

    DOUBLE  décalage et aller à l'état 51


État 39

    1 eol: . EOL
    2    | . EOL eol
   18 bg_frq: BG_LETTER_FRQ junk frq_list . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 52


État 40

    1 eol: . EOL
    2    | . EOL eol
   26 name_line: MOTIF STRING STRING . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 53


État 41

   25 name_line: MOTIF STRING eol .

    $défaut  réduction par utilisation de la règle 25 (name_line)


État 42

    5 meme: version alphabet strands bg_frq . motifs
   21 motifs: . name_line pwm url
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    MOTIF  décalage et aller à l'état 10

    motifs     aller à l'état 54
    name_line  aller à l'état 15


État 43

    6 meme: version alphabet strands motifs .

    $défaut  réduction par utilisation de la règle 6 (meme)


État 44

    7 meme: version alphabet bg_frq motifs .

    $défaut  réduction par utilisation de la règle 7 (meme)


État 45

    9 meme: version strands bg_frq motifs .

    $défaut  réduction par utilisation de la règle 9 (meme)


État 46

   27 pwm: PWM ALEN . NOMBRE MOTIF_W NOMBRE NSITES NOMBRE E NOMBRE eol mat

    NOMBRE  décalage et aller à l'état 55


État 47

   32 url: URL . STRING eol

    STRING  décalage et aller à l'état 56


État 48

   24 motifs: name_line pwm motifs .

    $défaut  réduction par utilisation de la règle 24 (motifs)


État 49

   21 motifs: . name_line pwm url
   21       | name_line pwm url .  [$end]
   22       | . name_line pwm
   23       | . name_line pwm url motifs
   23       | name_line pwm url . motifs
   24       | . name_line pwm motifs
   25 name_line: . MOTIF STRING eol
   26          | . MOTIF STRING STRING eol

    MOTIF  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 21 (motifs)

    motifs     aller à l'état 57
    name_line  aller à l'état 15


État 50

   17 strands: STRANDS STRING STRING eol .

    $défaut  réduction par utilisation de la règle 17 (strands)


État 51

   19 frq_list: . STRING DOUBLE
   19         | STRING DOUBLE .  [EOL]
   20         | . STRING DOUBLE frq_list
   20         | STRING DOUBLE . frq_list

    STRING  décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 19 (frq_list)

    frq_list  aller à l'état 58


État 52

   18 bg_frq: BG_LETTER_FRQ junk frq_list eol .

    $défaut  réduction par utilisation de la règle 18 (bg_frq)


État 53

   26 name_line: MOTIF STRING STRING eol .

    $défaut  réduction par utilisation de la règle 26 (name_line)


État 54

    5 meme: version alphabet strands bg_frq motifs .

    $défaut  réduction par utilisation de la règle 5 (meme)


État 55

   27 pwm: PWM ALEN NOMBRE . MOTIF_W NOMBRE NSITES NOMBRE E NOMBRE eol mat

    MOTIF_W  décalage et aller à l'état 59


État 56

    1 eol: . EOL
    2    | . EOL eol
   32 url: URL STRING . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 60


État 57

   23 motifs: name_line pwm url motifs .

    $défaut  réduction par utilisation de la règle 23 (motifs)


État 58

   20 frq_list: STRING DOUBLE frq_list .

    $défaut  réduction par utilisation de la règle 20 (frq_list)


État 59

   27 pwm: PWM ALEN NOMBRE MOTIF_W . NOMBRE NSITES NOMBRE E NOMBRE eol mat

    NOMBRE  décalage et aller à l'état 61


État 60

   32 url: URL STRING eol .

    $défaut  réduction par utilisation de la règle 32 (url)


État 61

   27 pwm: PWM ALEN NOMBRE MOTIF_W NOMBRE . NSITES NOMBRE E NOMBRE eol mat

    NSITES  décalage et aller à l'état 62


État 62

   27 pwm: PWM ALEN NOMBRE MOTIF_W NOMBRE NSITES . NOMBRE E NOMBRE eol mat

    NOMBRE  décalage et aller à l'état 63


État 63

   27 pwm: PWM ALEN NOMBRE MOTIF_W NOMBRE NSITES NOMBRE . E NOMBRE eol mat

    E  décalage et aller à l'état 64


État 64

   27 pwm: PWM ALEN NOMBRE MOTIF_W NOMBRE NSITES NOMBRE E . NOMBRE eol mat

    NOMBRE  décalage et aller à l'état 65


État 65

    1 eol: . EOL
    2    | . EOL eol
   27 pwm: PWM ALEN NOMBRE MOTIF_W NOMBRE NSITES NOMBRE E NOMBRE . eol mat

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 66


État 66

   27 pwm: PWM ALEN NOMBRE MOTIF_W NOMBRE NSITES NOMBRE E NOMBRE eol . mat
   28 mat: . position eol
   29    | . mat position eol
   30 position: . DOUBLE
   31         | . DOUBLE position

    DOUBLE  décalage et aller à l'état 67

    mat       aller à l'état 68
    position  aller à l'état 69


État 67

   30 position: . DOUBLE
   30         | DOUBLE .  [EOL]
   31         | . DOUBLE position
   31         | DOUBLE . position

    DOUBLE  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 30 (position)

    position  aller à l'état 70


État 68

   27 pwm: PWM ALEN NOMBRE MOTIF_W NOMBRE NSITES NOMBRE E NOMBRE eol mat .  [$end, MOTIF, URL]
   29 mat: mat . position eol
   30 position: . DOUBLE
   31         | . DOUBLE position

    DOUBLE  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 27 (pwm)

    position  aller à l'état 71


État 69

    1 eol: . EOL
    2    | . EOL eol
   28 mat: position . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 72


État 70

   31 position: DOUBLE position .

    $défaut  réduction par utilisation de la règle 31 (position)


État 71

    1 eol: . EOL
    2    | . EOL eol
   29 mat: mat position . eol

    EOL  décalage et aller à l'état 16

    eol  aller à l'état 73


État 72

   28 mat: position eol .

    $défaut  réduction par utilisation de la règle 28 (mat)


État 73

   29 mat: mat position eol .

    $défaut  réduction par utilisation de la règle 29 (mat)
